[tool.poetry]
name = "cmgd-web"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
requests = "^2.24.0"
jupyter = "^1.0.0"

[tool.poetry.plugins."cmgd_web.modules"]
"users" = "cmgd_web.views.users"
"files" = "cmgd_web.views.files"
"nextflow" = "cmgd_web.views.nextflow"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

