[tool.poetry]
name = "cmgd-web"
version = "0.2.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
google-cloud-storage = "^1.31.2"
google = "^3.0.0"
google-auth = "^1.22.0"
google-oauth = "^1.0.0"
databases = {extras = ["postgresql"], version = "^0.3.2"}
python-multipart = "^0.0.5"
pandas = "^1.1.3"
asyncpgsa = "^0.26.3"
python-language-server = "^0.36.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
requests = "^2.24.0"
jupyter = "^1.0.0"
eralchemy = "^1.2.10"

[tool.poetry.plugins."cmgd_web.modules"]
"files" = "cmgd_web.views.files"
"nextflow" = "cmgd_web.views.nextflow"
"samples" = "cmgd_web.views.samples"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

